apps/base/serubin-net/serubin-net.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: serubin-net
  namespace: default
  labels:
    app: serubin-net
    app.kubernetes.io/name: serubin-net

spec:
  replicas: 1
  selector:
    matchLabels:
      app: serubin-net
  template:
    metadata:
      labels:
        app: serubin-net
        app.kubernetes.io/name: serubin-net
    spec:
      containers:
        - name: serubin-net
          image: ghcr.io/serubin/serubin-net:2026.8.2
          ports:
            - name: web
              containerPort: 80
