apps/base/serubin-net/serubin-net.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serubin-net
  namespace: default

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: serubin-net
