apps/base/serubin-net/serubin-net.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serubin-net-ingress
  namespace: default
spec:
  rules:
    - host: ${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serubin-net
                port:
                  name: web
